<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fl_login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_login_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="-50dp"
            android:layout_marginRight="-300dp"
            android:background="@color/login_background"
            android:scaleType="centerCrop" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_login_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="91dp"
            android:src="@mipmap/ic_launcher" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/liner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">


                <android.obo.com.ui.widget.ClearWriteEditText
                    android:id="@+id/cwet_login_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cwet_background"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:textColor="@color/cwet_text_color"
                    android:textColorHint="@color/cwet_text_color" />

                <FrameLayout
                    android:id="@+id/fl_username_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/cwet_login_phone"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/liner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="37dp"
                android:orientation="horizontal">


                <android.obo.com.ui.widget.ClearWriteEditText
                    android:id="@+id/cwet_login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/cwet_background"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/cwet_text_color"
                    android:textColorHint="@color/cwet_text_color" />

                <FrameLayout
                    android:id="@+id/fl_pass_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/cwet_login_password"
                    android:layout_centerVertical="true"
                    android:visibility="gone">

                </FrameLayout>
            </RelativeLayout>


            <Button
                android:id="@+id/btn_login_sign"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="34dp"
                android:text="@string/login"
                android:textColor="@color/login_text_color" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_forgot"
        android:textSize="@dimen/font_size_middle"
        android:textColor="@color/text_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:text="@string/forgot_password" />


    <TextView
        android:id="@+id/tv_login_register"
        android:textSize="@dimen/font_size_middle"
        android:textColor="@color/text_gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/new_user" />

</RelativeLayout>
